Thursday, May 2, James Turner

    * Changed Time::Stamp::getCurrent() into a static
      factory method now(). The previous syntax looked
      really odd.
    * Updated all the callers of above.
    * Modified stubServer to set SO_REUSEADDR on it's
      sockets, which should fix the odd test problems (well some
      of them .. it still gets linker errors which is a pain).
      Thanks to elefth for spotting this one.
    * Added some boot-strapping code to TypeInfo, not sure
      how well it will work, but it uses the same path as
      loading from atlas.xml, so it should be safe.

Monday, April 29, James Turner

	* Add createRoom method to Room, to enable explicit creation
	  of OOG rooms.
	* Added a Changed signal to Room, with identical semantics to
	  Entity; this can be used to receive notifications when room
	  attributes such as name, topic and the set of child rooms
	  changes.
	* Extended Lobby to deal with room creation internally,
	  including a handler for SIGHT(CREATE) ops.
	* Made Room::getID() more robust in the case where the ID
	  is not available; now throws a meaningful exception, 
	  instead of returning an empty ID.
	* Added initial lobby tests; as usual only partial coverage,
	  but better than nothing.
	* Changed configure to simply detect CppUnit automatically,
	  so --enable-cppunit is now uncessary.
	* Updated the README and INSTALL documents a bit
	* Removed Meta::poll() and made recv() protected; these are
	  both obsolete since the new Polling system was added.

Monday, April 29, Ron Steinke

	* Wrapped calls to PollDefault::removeStream() in Meta in a check
	  that _stream->is_open()

Sunday, April 28, Ron Steinke

	* Fixed signed vs. unsigned problems in Time::Stamp by making
	  everything signed.
	* Added a getCurrent() member function equivalent to getCurrentTime(),
	  made getCurrentTime() an inline wrapper around it

Sunday, April 28, Al Riddoch

	* src/Player.cpp: Fix so that GotAllCharacters is emitted when